# rust-sample

./: Cargo.toml
src/: addition.rs  main.rs
